add_library(protos EXCLUDE_FROM_ALL
    tColor.pb.cc
    tCoord.pb.cc
    tFunction.pb.cc
    tPolynomial.pb.cc
    nAuthentication.pb.cc
    nNetwork.pb.cc
    nNetObject.pb.cc
    nNetObjectPrivate.pb.cc
    nServerInfo.pb.cc
    nConfig.pb.cc
    eTeam.pb.cc
    ePlayer.pb.cc
    eNetGameObject.pb.cc
    eVoter.pb.cc
    eEventNotification.pb.cc
    eLagCompensation.pb.cc
    eTimer.pb.cc
    zZone.pb.cc
    zShape.pb.cc
    gGame.pb.cc
    gCycle.pb.cc
    gZone.pb.cc
    gWall.pb.cc
    gAIBase.pb.cc
)
add_dependencies( protos
    tColor.pb.h
    tCoord.pb.h
    tFunction.pb.h
    tPolynomial.pb.h
    nAuthentication.pb.h
    nNetwork.pb.h
    nNetObject.pb.h
    nNetObjectPrivate.pb.h
    nServerInfo.pb.h
    nConfig.pb.h
    eTeam.pb.h
    ePlayer.pb.h
    eNetGameObject.pb.h
    eVoter.pb.h
    eEventNotification.pb.h
    eLagCompensation.pb.h
    eTimer.pb.h
    zZone.pb.h
    zShape.pb.h
    gGame.pb.h
    gCycle.pb.h
    gZone.pb.h
    gWall.pb.h
    gAIBase.pb.h
)

# WRAP_PROTO is defined in protobuf.cmake
WRAP_PROTO (
    tColor.proto
    tCoord.proto
    tFunction.proto
    tPolynomial.proto
    nAuthentication.proto
    nNetwork.proto
    nNetObject.proto
    nNetObjectPrivate.proto
    nServerInfo.proto
    nConfig.proto
    eTeam.proto
    ePlayer.proto
    eNetGameObject.proto
    eVoter.proto
    eEventNotification.proto
    eLagCompensation.proto
    eTimer.proto
    zZone.proto
    zShape.proto
    gGame.proto
    gCycle.proto
    gWall.proto
    gZone.proto
    gWall.proto
    gAIBase.proto
)
